// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Batch at, link, status 1`] = `
<table
  class="pure-table"
>
  <tr
    class=""
  >
    <td>
      2 days ago
    </td>
    <td>
      https://mangakakalot.com/manga/versatile_mage
    </td>
    <td>
      OK
    </td>
  </tr>
</table>
`;

exports[`Storyshots Batch link, status, at 1`] = `
<table
  class="pure-table"
>
  <tr
    class=""
  >
    <td>
      https://mangakakalot.com/manga/versatile_mage
    </td>
    <td>
      OK
    </td>
    <td>
      2 days ago
    </td>
  </tr>
</table>
`;

exports[`Storyshots Batch live batch 1`] = `
<table
  class="pure-table"
>
  <tr
    class="live"
  >
    <td>
      https://mangakakalot.com/manga/versatile_mage
    </td>
    <td>
      OK
    </td>
    <td>
      2 days ago
    </td>
  </tr>
</table>
`;

exports[`Storyshots BatchList additional batch if more recent than page 1 1`] = `
<div
  class="batchList"
>
  <div>
    
    New items (1) 
    <button>
      Reload
    </button>
  </div>
   
  <table
    class="pure-table"
  >
    <thead>
      <tr>
        <th>
          status
        </th>
         
        <th>
          lien externe
        </th>
         
        <th>
          at
        </th>
         
        <th>
          lien interne
        </th>
      </tr>
    </thead>
     
    <tbody />
     
    <tfoot>
      <tr>
        <td
          colspan="3"
        >
          <ul
            class="pagination"
            data-v-82963a40=""
          >
            <!---->
             
            <li
              class="disabled"
              data-v-82963a40=""
            >
              <a
                data-v-82963a40=""
                tabindex="-1"
              >
                Prev
              </a>
            </li>
              
            <li
              class="disabled"
              data-v-82963a40=""
            >
              <a
                data-v-82963a40=""
                tabindex="-1"
              >
                Next
              </a>
            </li>
             
            <!---->
          </ul>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Storyshots BatchList default 1`] = `
<div
  class="batchList"
>
  <!---->
   
  <table
    class="pure-table"
  >
    <thead>
      <tr>
        <th>
          status
        </th>
         
        <th>
          lien externe
        </th>
         
        <th>
          at
        </th>
         
        <th>
          lien interne
        </th>
      </tr>
    </thead>
     
    <tbody />
     
    <tfoot>
      <tr>
        <td
          colspan="3"
        >
          <ul
            class="pagination"
            data-v-82963a40=""
          >
            <!---->
             
            <li
              class="disabled"
              data-v-82963a40=""
            >
              <a
                data-v-82963a40=""
                tabindex="-1"
              >
                Prev
              </a>
            </li>
              
            <li
              class="disabled"
              data-v-82963a40=""
            >
              <a
                data-v-82963a40=""
                tabindex="-1"
              >
                Next
              </a>
            </li>
             
            <!---->
          </ul>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Storyshots BatchList no additional batch if additional batch are in the past 1`] = `
<div
  class="batchList"
>
  <div>
    
    New items (2) 
    <button>
      Reload
    </button>
  </div>
   
  <table
    class="pure-table"
  >
    <thead>
      <tr>
        <th>
          status
        </th>
         
        <th>
          lien externe
        </th>
         
        <th>
          at
        </th>
         
        <th>
          lien interne
        </th>
      </tr>
    </thead>
     
    <tbody />
     
    <tfoot>
      <tr>
        <td
          colspan="3"
        >
          <ul
            class="pagination"
            data-v-82963a40=""
          >
            <!---->
             
            <li
              class="disabled"
              data-v-82963a40=""
            >
              <a
                data-v-82963a40=""
                tabindex="-1"
              >
                Prev
              </a>
            </li>
              
            <li
              class="disabled"
              data-v-82963a40=""
            >
              <a
                data-v-82963a40=""
                tabindex="-1"
              >
                Next
              </a>
            </li>
             
            <!---->
          </ul>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Storyshots BatchList two per page 1`] = `
<div
  class="batchList"
>
  <!---->
   
  <table
    class="pure-table"
  >
    <thead>
      <tr>
        <th>
          status
        </th>
         
        <th>
          lien externe
        </th>
         
        <th>
          at
        </th>
         
        <th>
          lien interne
        </th>
      </tr>
    </thead>
     
    <tbody />
     
    <tfoot>
      <tr>
        <td
          colspan="3"
        >
          <ul
            class="pagination"
            data-v-82963a40=""
          >
            <!---->
             
            <li
              class="disabled"
              data-v-82963a40=""
            >
              <a
                data-v-82963a40=""
                tabindex="-1"
              >
                Prev
              </a>
            </li>
              
            <li
              class="disabled"
              data-v-82963a40=""
            >
              <a
                data-v-82963a40=""
                tabindex="-1"
              >
                Next
              </a>
            </li>
             
            <!---->
          </ul>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Storyshots BatchPoller should not notify (pending) 1`] = `<div />`;

exports[`Storyshots BatchPoller should not notify shortDelayed 1`] = `<div />`;

exports[`Storyshots BatchPoller should notify OK 1`] = `<div />`;

exports[`Storyshots Card default 1`] = `
<div
  class="pure-u-1-2 pure-u-lg-1-6"
>
  <div
    class="card"
  >
    <a
      class=""
      href="#/xx/nid"
    >
      <figure>
        <img
          src="https://upload.wikimedia.org/wikipedia/en/7/7d/Lenna_%28test_image%29.png"
        />
      </figure>
    </a>
     
    <div>
      <h4
        title="some name"
      >
        <span>
          <a
            class=""
            href="#/xx/nid"
          >
            some name
          </a>
        </span>
      </h4>
       
      <div
        class="chapter"
      >
        <span>
          <a
            href="lastchapurl"
          >
            c
            <span>
              2
            </span>
            ↗
          </a>
        </span>
         
        <time
          updatedat="1577206158382"
        >
          2 days ago
        </time>
      </div>
    </div>
     
    <hr />
     
    <div
      style="position: relative;"
    >
      <!---->
       
      <span>
        <span
          class="mt-follow"
          title="Track some name"
        >
          <a
            href="#"
          >
            ♥
          </a>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Follow default 1`] = `
<span
  title="Test"
>
  <span
    class="mt-follow"
    title="Track def"
  >
    <a
      href="#"
    >
      ♥
    </a>
  </span>
</span>
`;

exports[`Storyshots Follow followed 1`] = `
<span
  title="Test"
>
  <span
    class="followed mt-follow"
    title="Untrack def"
  >
    <a
      href="#"
    >
      ♥
    </a>
  </span>
</span>
`;

exports[`Storyshots Grid default 1`] = `
<div
  class="mt-grid"
>
  <div
    class="pure-g"
  >
    <div
      class="pure-u-1-2 pure-u-lg-1-6"
    >
      <div
        class="card"
      >
        <a
          class=""
          href="#/manga/nid"
        >
          <figure>
            <img
              src="https://upload.wikimedia.org/wikipedia/en/7/7d/Lenna_%28test_image%29.png"
            />
          </figure>
        </a>
         
        <div>
          <h4
            title="some name"
          >
            <span>
              <a
                class=""
                href="#/manga/nid"
              >
                some name
              </a>
            </span>
          </h4>
           
          <div
            class="chapter"
          >
            <span>
              <a
                href="lastchapurl"
              >
                c
                <span>
                  2
                </span>
                ↗
              </a>
            </span>
             
            <time
              updatedat="1577206158382"
            >
              2 days ago
            </time>
          </div>
        </div>
         
        <hr />
         
        <div
          style="position: relative;"
        >
          <span
            class="card-stats"
          >
            1/2
          </span>
           
          <span>
            <span
              class="followed mt-follow"
              title="Untrack some name"
            >
              <a
                href="#"
              >
                ♥
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="pure-u-1-2 pure-u-lg-1-6"
    >
      <div
        class="card"
      >
        <a
          class=""
          href="#/manga/nid"
        >
          <figure>
            <img
              src="https://upload.wikimedia.org/wikipedia/en/7/7d/Lenna_%28test_image%29.png"
            />
          </figure>
        </a>
         
        <div>
          <h4
            title="other"
          >
            <span>
              <a
                class=""
                href="#/manga/nid"
              >
                other
              </a>
            </span>
          </h4>
           
          <div
            class="chapter"
          >
            <span>
              <a
                href="lastchapurl"
              >
                c
                <span>
                  2
                </span>
                ↗
              </a>
            </span>
             
            <time
              updatedat="1577206158382"
            >
              2 days ago
            </time>
          </div>
        </div>
         
        <hr />
         
        <div
          style="position: relative;"
        >
          <!---->
           
          <span>
            <span
              class="mt-follow"
              title="Track other"
            >
              <a
                href="#"
              >
                ♥
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="mt-pagination"
  >
    <a
      class="pure-button"
      href="#"
    >
      Moar
    </a>
  </div>
</div>
`;

exports[`Storyshots Grid no pagination (deactivated) 1`] = `
<div
  class="mt-grid"
>
  <div
    class="pure-g"
  >
    <div
      class="pure-u-1-2 pure-u-lg-1-6"
    >
      <div
        class="card"
      >
        <a
          class=""
          href="#/manga/nid"
        >
          <figure>
            <img
              src="https://upload.wikimedia.org/wikipedia/en/7/7d/Lenna_%28test_image%29.png"
            />
          </figure>
        </a>
         
        <div>
          <h4
            title="some name"
          >
            <span>
              <a
                class=""
                href="#/manga/nid"
              >
                some name
              </a>
            </span>
          </h4>
           
          <div
            class="chapter"
          >
            <span>
              <a
                href="lastchapurl"
              >
                c
                <span>
                  2
                </span>
                ↗
              </a>
            </span>
             
            <time
              updatedat="1577206158382"
            >
              2 days ago
            </time>
          </div>
        </div>
         
        <hr />
         
        <div
          style="position: relative;"
        >
          <span
            class="card-stats"
          >
            1/2
          </span>
           
          <span>
            <span
              class="followed mt-follow"
              title="Untrack some name"
            >
              <a
                href="#"
              >
                ♥
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="pure-u-1-2 pure-u-lg-1-6"
    >
      <div
        class="card"
      >
        <a
          class=""
          href="#/manga/nid"
        >
          <figure>
            <img
              src="https://upload.wikimedia.org/wikipedia/en/7/7d/Lenna_%28test_image%29.png"
            />
          </figure>
        </a>
         
        <div>
          <h4
            title="other"
          >
            <span>
              <a
                class=""
                href="#/manga/nid"
              >
                other
              </a>
            </span>
          </h4>
           
          <div
            class="chapter"
          >
            <span>
              <a
                href="lastchapurl"
              >
                c
                <span>
                  2
                </span>
                ↗
              </a>
            </span>
             
            <time
              updatedat="1577206158382"
            >
              2 days ago
            </time>
          </div>
        </div>
         
        <hr />
         
        <div
          style="position: relative;"
        >
          <!---->
           
          <span>
            <span
              class="mt-follow"
              title="Track other"
            >
              <a
                href="#"
              >
                ♥
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Grid no pagination (no more) 1`] = `
<div
  class="mt-grid"
>
  <div
    class="pure-g"
  >
    <div
      class="pure-u-1-2 pure-u-lg-1-6"
    >
      <div
        class="card"
      >
        <a
          class=""
          href="#/manga/nid"
        >
          <figure>
            <img
              src="https://upload.wikimedia.org/wikipedia/en/7/7d/Lenna_%28test_image%29.png"
            />
          </figure>
        </a>
         
        <div>
          <h4
            title="some name"
          >
            <span>
              <a
                class=""
                href="#/manga/nid"
              >
                some name
              </a>
            </span>
          </h4>
           
          <div
            class="chapter"
          >
            <span>
              <a
                href="lastchapurl"
              >
                c
                <span>
                  2
                </span>
                ↗
              </a>
            </span>
             
            <time
              updatedat="1577206158382"
            >
              2 days ago
            </time>
          </div>
        </div>
         
        <hr />
         
        <div
          style="position: relative;"
        >
          <!---->
           
          <span>
            <span
              class="mt-follow"
              title="Track some name"
            >
              <a
                href="#"
              >
                ♥
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="pure-u-1-2 pure-u-lg-1-6"
    >
      <div
        class="card"
      >
        <a
          class=""
          href="#/manga/nid"
        >
          <figure>
            <img
              src="https://upload.wikimedia.org/wikipedia/en/7/7d/Lenna_%28test_image%29.png"
            />
          </figure>
        </a>
         
        <div>
          <h4
            title="other"
          >
            <span>
              <a
                class=""
                href="#/manga/nid"
              >
                other
              </a>
            </span>
          </h4>
           
          <div
            class="chapter"
          >
            <span>
              <a
                href="lastchapurl"
              >
                c
                <span>
                  2
                </span>
                ↗
              </a>
            </span>
             
            <time
              updatedat="1577206158382"
            >
              2 days ago
            </time>
          </div>
        </div>
         
        <hr />
         
        <div
          style="position: relative;"
        >
          <!---->
           
          <span>
            <span
              class="mt-follow"
              title="Track other"
            >
              <a
                href="#"
              >
                ♥
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots LinkImporter default 1`] = `
<form
  action="#incase"
  class="pure-form linkImporter"
>
  <fieldset>
    <legend>
      Import from a link
    </legend>
     
    <div>
      <table
        class="mq-table pure-table-bordered pure-table"
      >
        <caption>
          Examples
        </caption>
         
        <thead>
          <th>
            from
          </th>
           
          <th>
            url
          </th>
        </thead>
         
        <tbody>
          <tr>
            <td>
              mangakakalot
            </td>
            <td>
              https://mangakakalot.com/manga/versatile_mage
            </td>
          </tr>
           
          <tr>
            <td>
              fanfox
            </td>
            <td>
              https://fanfox.net/manga/versatile_mage/
            </td>
          </tr>
        </tbody>
      </table>
    </div>
     
    <div
      class="fields"
    >
      <input
        class="pure-input-1-2"
        name="link"
        pattern="^https://(mangakakalot.com|manganelo.com|fanfox.net)/manga/[^/]+/?"
        placeholder="https://mangakakalot.com/manga/versatile_mage"
        required="required"
        type="text"
      />
       
      <label
        class="pure-checkbox"
        for="thumb"
      >
        <input
          id="thumb"
          name="thumb"
          type="checkbox"
        />
         Refresh thumb
      
      </label>
       
      <label
        class="pure-checkbox"
        for="description"
      >
        <input
          id="description"
          name="description"
          type="checkbox"
        />
         Refresh description
      
      </label>
       
      <button
        class="pure-button pure-button-primary pure-input"
        type="submit"
      >
        Import
      </button>
    </div>
  </fieldset>
</form>
`;

exports[`Storyshots MangaChapters no scroll if no chaps, no table display either 1`] = `
<div
  class="mangaChapters"
>
  <!---->
   
  <div>
    
    There are no chapters at the moment.
   
  </div>
</div>
`;

exports[`Storyshots MangaChapters scroll to chap0 if no lastRead 1`] = `
<div
  class="mangaChapters"
>
  <a
    href="#chap0"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-long-arrow-alt-down fa-w-8"
      data-icon="long-arrow-alt-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 256 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
        fill="currentColor"
      />
    </svg>
    
    Scroll to last read (c0)
  
  </a>
   
  <table
    class="pure-table"
    lastread="-1"
  >
    <thead>
      <th>
        Chapter
      </th>
       
      <th>
        from
      </th>
       
      <th>
        when
      </th>
       
      <th
        class="truckKun"
        title="mark as read"
      >
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-truck fa-w-20"
            data-icon="truck"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 640 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class=""
              d="M624 352h-16V243.9c0-12.7-5.1-24.9-14.1-33.9L494 110.1c-9-9-21.2-14.1-33.9-14.1H416V48c0-26.5-21.5-48-48-48H48C21.5 0 0 21.5 0 48v320c0 26.5 21.5 48 48 48h16c0 53 43 96 96 96s96-43 96-96h128c0 53 43 96 96 96s96-43 96-96h48c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zM160 464c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm320 0c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm80-208H416V144h44.1l99.9 99.9V256z"
              fill="currentColor"
            />
          </svg>
        </div>
      </th>
    </thead>
     
    <tbody>
      <tr
        class=""
        id="chap2"
      >
        <td>
          c2
        </td>
         
        <td />
         
        <td>
          <time>
            3 days ago
          </time>
        </td>
         
        <td
          data-num="2"
          title="mark as read up to there"
        />
      </tr>
      <tr
        class=""
        id="chap0"
      >
        <td>
          c0
        </td>
         
        <td />
         
        <td>
          <time>
            3 days ago
          </time>
        </td>
         
        <td
          data-num="0"
          title="mark as read up to there"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots MangaChapters scroll to lastRead 1`] = `
<div
  class="mangaChapters"
>
  <a
    href="#chap2"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-long-arrow-alt-down fa-w-8"
      data-icon="long-arrow-alt-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 256 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
        fill="currentColor"
      />
    </svg>
    
    Scroll to last read (c2)
  
  </a>
   
  <table
    class="pure-table"
    lastread="2"
  >
    <thead>
      <th>
        Chapter
      </th>
       
      <th>
        from
      </th>
       
      <th>
        when
      </th>
       
      <th
        class="truckKun"
        title="mark as read"
      >
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-truck fa-w-20"
            data-icon="truck"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 640 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class=""
              d="M624 352h-16V243.9c0-12.7-5.1-24.9-14.1-33.9L494 110.1c-9-9-21.2-14.1-33.9-14.1H416V48c0-26.5-21.5-48-48-48H48C21.5 0 0 21.5 0 48v320c0 26.5 21.5 48 48 48h16c0 53 43 96 96 96s96-43 96-96h128c0 53 43 96 96 96s96-43 96-96h48c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zM160 464c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm320 0c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm80-208H416V144h44.1l99.9 99.9V256z"
              fill="currentColor"
            />
          </svg>
        </div>
      </th>
    </thead>
     
    <tbody>
      <tr
        class="read"
        id="chap2"
      >
        <td>
          c2
        </td>
         
        <td />
         
        <td>
          <time>
            3 days ago
          </time>
        </td>
         
        <td
          data-num="2"
          title="mark as read up to there"
        />
      </tr>
      <tr
        class="read"
        id="chap0"
      >
        <td>
          c0
        </td>
         
        <td />
         
        <td>
          <time>
            3 days ago
          </time>
        </td>
         
        <td
          data-num="0"
          title="mark as read up to there"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots MangaView default 1`] = `
<div
  class="mangaView"
>
  <h1>
    
  </h1>
   
  <div
    class="pure-g"
  >
    <div
      class="pure-u-5-5 pure-u-lg-1-5"
    >
      <figure>
        <img />
      </figure>
    </div>
     
    <div
      class="pure-u-5-5 pure-u-lg-4-5"
    >
      <!---->
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots MangaView html escaped but htmlentities decoded 1`] = `
<div
  class="mangaView"
>
  <h1>
    
  </h1>
   
  <div
    class="pure-g"
  >
    <div
      class="pure-u-5-5 pure-u-lg-1-5"
    >
      <figure>
        <img />
      </figure>
    </div>
     
    <div
      class="pure-u-5-5 pure-u-lg-4-5"
    >
      <!---->
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots MangaView show viewed chapters 1`] = `
<div
  class="mangaView"
>
  <h1>
    
  </h1>
   
  <div
    class="pure-g"
  >
    <div
      class="pure-u-5-5 pure-u-lg-1-5"
    >
      <figure>
        <img />
      </figure>
    </div>
     
    <div
      class="pure-u-5-5 pure-u-lg-4-5"
    >
      <!---->
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots MangaView shows lena after refresh 1`] = `
<div
  class="mangaView"
>
  <h1>
    
  </h1>
   
  <div
    class="pure-g"
  >
    <div
      class="pure-u-5-5 pure-u-lg-1-5"
    >
      <figure>
        <img />
      </figure>
    </div>
     
    <div
      class="pure-u-5-5 pure-u-lg-4-5"
    >
      <!---->
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots MangaView without description 1`] = `
<div
  class="mangaView"
>
  <h1>
    
  </h1>
   
  <div
    class="pure-g"
  >
    <div
      class="pure-u-5-5 pure-u-lg-1-5"
    >
      <figure>
        <img />
      </figure>
    </div>
     
    <div
      class="pure-u-5-5 pure-u-lg-4-5"
    >
      <!---->
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Menu logged admin 1`] = `
<div
  class="pure-menu pure-menu-horizontal"
>
  <a
    class="pure-menu-heading pure-menu-link"
    href="/"
  >
    MangaTrack
  </a>
   
  <a
    class="pure-menu-heading pure-menu-link"
    href="/me"
    title="my space"
  >
    Me
  </a>
   
  <a
    class="pure-menu-heading pure-menu-link admin"
    href="#/admin"
  >
    Admin
  </a>
   
  <a
    class="pure-menu-heading pure-menu-link login hide"
    href="#/login"
    title="Mainly sync your tracked stuff"
  >
    Login
  </a>
   
  <a
    class="pure-menu-heading pure-menu-link logout"
    href="#/login"
  >
    Logout
  </a>
</div>
`;

exports[`Storyshots Menu no logged no admin 1`] = `
<div
  class="pure-menu pure-menu-horizontal"
>
  <a
    class="pure-menu-heading pure-menu-link"
    href="/"
  >
    MangaTrack
  </a>
   
  <a
    class="pure-menu-heading pure-menu-link"
    href="/me"
    title="my space"
  >
    Me
  </a>
   
  <a
    class="pure-menu-heading pure-menu-link admin hide"
    href="#/admin"
  >
    Admin
  </a>
   
  <a
    class="pure-menu-heading pure-menu-link login"
    href="#/login"
    title="Mainly sync your tracked stuff"
  >
    Login
  </a>
   
  <a
    class="pure-menu-heading pure-menu-link logout hide"
    href="#/login"
  >
    Logout
  </a>
</div>
`;

exports[`Storyshots Pagination default 1`] = `
<div
  class="mt-pagination"
>
  <a
    class="pure-button"
    href="#"
  >
    Moar
  </a>
</div>
`;
